@@ -3,6 +3,7 @@
 	* Added Feature #30190: Hook in module class (Thanks to Julia Pardanaud)
 	* Fixed Bug #30438: validate-alpha-w-umlauts and validate-alphanum-w-umlaut in 1.6.4 broken (Thanks to Tobias)
 	* Fixed Bug #30705: XLS export : unable to download in IE (Thanks to Julien Henchoz)
+	* Removed header variable from mod1/class.tx_powermail_export.php as header()-function hasn't any return value
 
 2012-06-21  Nicole Cordes <cordes@cps-it.de>
 
